discussion/kv_engine/152218/152218_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42820: WIP paused time metric

Change-Id: Ie021a98adc15bb748059204e3debd5bf1ffa919d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-04-27 14:34:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-27 14:43:48.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35307/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\producer.cc(130): error C2065: "timePaused": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35307/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8551/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:130:9: error: call to non-static member function without an object argument [clang-diagnostic-error]
        timePaused += std::chrono::steady_clock::now() - *lastPaused;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:130:9: error: use of undeclared identifier "timePaused"; did you mean "isPaused"? [clang-diagnostic-error]
        timePaused += std::chrono::steady_clock::now() - *lastPaused;
        ^~~~~~~~~~
        isPaused
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/connhandler.h:331:24: note: "isPaused" declared here
    [[nodiscard]] bool isPaused() const {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:132:58: error: use of undeclared identifier "timePaused" [clang-diagnostic-error]
                getConnTypeFromName(producer.getName()), timePaused);
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8551/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:130:9:
error: call to non-static member function without an object argument [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8551/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30208/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30208/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10079/ : FAILURE

Compile error at [2021-04-27T14:36:20.860Z] ../kv_engine/engines/ep/src/dcp/producer.cc:130:9:
error: ?timePaused? was not declared in this scope; did you mean ?isPaused??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10079/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9149/ : FAILURE

Compile error at [2021-04-27T14:39:23.013Z] ../kv_engine/engines/ep/src/dcp/producer.cc:130:9:
error: use of undeclared identifier "timePaused"; did you mean "isPaused"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9149/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10222/ : FAILURE

Compile error at [2021-04-27T14:37:39.140Z] ../kv_engine/engines/ep/src/dcp/producer.cc:130:9:
error: ?timePaused? was not declared in this scope; did you mean ?isPaused??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10471/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18022/ : FAILURE

Compile error at [2021-04-27T14:37:25.672Z] ../kv_engine/engines/ep/src/dcp/producer.cc:130:9:
error: use of undeclared identifier "timePaused"; did you mean "isPaused"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18022/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7100/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
